--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "E Publication",
-  "name": "E Publication App",
+  "short_name": "React",
+  "name": "React App",
   "icons": [
     {
       "src": "favicon.ico",
